--- a/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Common/SystemInfo.cshtml
@@ -80,7 +80,7 @@
     </tr>
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.HttpHost):
+            @Html.SmartLabelFor(model => model.HttpHost)
         </td>
         <td class="adminData">
             @Model.HttpHost
