--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -204,7 +204,7 @@
         </tr>
        <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.StoreName):
+                @Html.SmartLabelFor(model => model.StoreName)
             </td>
             <td class="adminData">
                 @Model.StoreName
