--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/List.cshtml
@@ -75,7 +75,7 @@
         </tr>
        <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.StoreId):
+                @Html.SmartLabelFor(model => model.StoreId)
             </td>
             <td class="adminData">
                 @Html.DropDownList("StoreId", Model.AvailableStores)
