--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -74,7 +74,7 @@
         </tr>
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchStoreId):
+                @Html.SmartLabelFor(model => model.SearchStoreId)
             </td>
             <td class="adminData">
                 @Html.DropDownList("SearchStoreId", Model.AvailableStores)
