--- a/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/MessageTemplate/List.cshtml
@@ -16,7 +16,7 @@
 <table width="100%">
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.SearchStoreId):
+            @Html.SmartLabelFor(model => model.SearchStoreId)
         </td>
         <td class="adminData">
             @Html.DropDownList("SearchStoreId", Model.AvailableStores)
