--- a/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
@@ -19,7 +19,7 @@
 <table width="100%">
     <tr>
         <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.SearchStoreId):
+            @Html.SmartLabelFor(model => model.SearchStoreId)
         </td>
         <td class="adminData">
             @Html.DropDownList("SearchStoreId", Model.AvailableStores)
@@ -45,7 +45,7 @@
                         columns.Bound(x => x.Title)
 							.Width(350)
                             .Template(x => Html.ActionLink(x.Title, "Edit", new { id = x.Id }))
-                            .ClientTemplate("<a href=\"Edit/<#= Id #>'><#Title#></a>");
+                            .ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Title #></a>");
                         columns.Bound(x => x.LanguageName);
                         columns.Bound(x => x.Comments)
                             .Centered()
