--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/_CreateOrUpdatePlugin.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/_CreateOrUpdatePlugin.cshtml
@@ -104,7 +104,7 @@
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.LimitedToStores):
+                @Html.SmartLabelFor(model => model.LimitedToStores)
             </td>
             <td class="adminData">
                 @Html.EditorFor(model => model.LimitedToStores)
@@ -113,7 +113,7 @@
         </tr>
         <tr id="pnl-available-stores">
             <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.AvailableStores):
+                @Html.SmartLabelFor(model => model.AvailableStores)
             </td>
             <td class="adminData">
                 @if (Model.AvailableStores != null && Model.AvailableStores.Count > 0)
